--- a/templates/worldcup.html
+++ b/templates/worldcup.html
@@ -166,7 +166,7 @@ body{
 <script>
 const video = document.getElementById('liveVideo');
 const notice = document.getElementById('notice');
-const streamURL = '/proxy/stream.m3u8';
+const streamURL = '/proxy/stream1.m3u8';
 
 function startHLS() {
     notice.innerText = "🔄 جاري تحميل البث...";
